Wining conditions are very straight forward and easy. winConditions function track the position and at the end of screen width decides the winner. But every time I tried the game rockets break the container and row's and go far right on page. For a while, I thought it's some sort of div bug. I tried to fix div size but in vain. After 3 hours I invoked the winConditions() inside moveRight function and boooom, win logic is working.

--- a/style/style.css
+++ b/style/style.css
@@ -1,5 +1,5 @@
 body {
-	background-image: url("../imges/luner.jpg");
+	background-image: url("../imges/lunar.jpg");
 	background-size: cover;
 	background-repeat: no-repeat;
 	font-family: Verdana, Times, serif;
@@ -14,16 +14,24 @@ img {
 }
 
 #trackOne {
-	position: relative;
+	/*width: 1000px;*/
 	height: 150px;
-	/*border: solid black 2px;*/
+	/*background: black;*/
 }
 
 #trackTwo {
-	position: relative;
+	/*width: 1000px;*/
 	height: 150px;
-	/*border: white solid 2px;*/
+	/*background-color: red;*/
 }
+
+/*#second {
+	background-color: white;
+}*/
+
+/*#img1, #img2 {
+	background-color: yellow;
+}*/
 
 p {
 	color: white;
